fabric/testdata/out/ing_smart-product-platform-test-gateway-get-hello-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(3) \u0026\u0026
      Path(\"/hello\") \u0026\u0026 Method(\"GET\") \u0026\u0026 Header(\"X-Forwarded-Proto\",
      \"https\")"},"labels":{"application":"smart-product-platform-test","component":"service","controller-uid":"d3827fcf-dbf7-4d68-9e09-27e82003d0db","deployment-id":"d-sgokz8f17ukn9f5xqjnpf9xuk","environment":"staging","pipeline-id":"l-2dwhxqk9wh3m6ur6ovucqfumec","version":"master-13"},"name":"smart-product-platform-test-gateway-get-hello-all","namespace":"default"},"spec":{"rules":[{"host":"spp-product-details.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"s [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid")
      -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward", "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(3) && Path("/hello") && Method("GET") &&
      Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2021-07-06T12:27:21Z"
  generation: 1
  labels:
    application: smart-product-platform-test
    component: service
    controller-uid: d3827fcf-dbf7-4d68-9e09-27e82003d0db
    deployment-id: d-sgokz8f17ukn9f5xqjnpf9xuk
    environment: staging
    pipeline-id: l-2dwhxqk9wh3m6ur6ovucqfumec
    version: master-13
  name: smart-product-platform-test-gateway-get-hello-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: smart-product-platform-test-gateway
    uid: d3827fcf-dbf7-4d68-9e09-27e82003d0db
  resourceVersion: "1357488773"
  uid: cdd4b25b-b690-4dbe-bcdf-156377601ac1
spec:
  rules:
  - host: spp-product-details.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: smart-product-platform-test
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
